Simpify the Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,9 +3,7 @@ MAINTAINER Russell Smith "russ@rainforestqa.com"
 
 RUN apt-get update
 RUN apt-get install -y ruby1.9.1
-RUN echo "install: --no-rdoc --no-ri" > ~/.gemrc
-RUN echo "update:  --no-rdoc --no-ri" >> ~/.gemrc
-RUN gem install flash_policy_server
+RUN gem install flash_policy_server --no-rdoc --no-ri
 
 ADD crossdomain.xml /root/
 
